# icfp2017

./: .gitignore  Cargo.toml  Makefile  PACKAGES  README.md  install  punter  rustfmt.toml
benches/: bench.rs  result1.txt  result2.txt
src/: lib.rs  main.rs
src/punter/: arena.rs  bot.rs  game.rs  io.rs  mod.rs  play.rs  prelude.rs  protocol.rs
task/maps/: junction.json
visualizer/: index.html  oxford-center-sparse.json  oxford-log.json
