[package]
authors = ["Hayato Ito <hayato@google.com>"]
name = "icfp2017"
version = "0.1.0"

[dependencies]
base64 = "0.6.0"
bincode = "0.8.0"
clap = "2.26.0"
env_logger = "0.4.3"
log = "0.3.8"
logger = "0.3.0"
loggerv = "0.3.0"
pbr = "1.0.0"
quick-error = "1.2.0"
rand = "0.3.16"
rayon = "0.8.2"
serde = "1.0.11"
serde_derive = "1.0.11"
serde_json = "1.0.2"

[dependencies.chrono]
features = ["serde"]
version = "0.2.25"
